--- a/rust/web/axum-basic-web/Cargo.toml
+++ b/rust/web/axum-basic-web/Cargo.toml
@@ -11,6 +11,7 @@ async-trait = "0.1"
 # -- Json
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
+serde_with = "3"
 
 # -- Web
 axum = {version = "0.7", features = ["macros"]}
@@ -20,6 +21,11 @@ tower-cookies = "0.10"
 # -- Tracing
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
+
+# -- Others
+lazy-regex = "3"
+strum_macros = "0.26.2"
+uuid = {version = "1", features = ["v4","fast-rng"]}
 
 
 [dev-dependencies]
